[package]
name = "mtotp"
version = "0.1.0"
edition = "2021"
description = "Totp manager"
license = "MIT"
repository = "https://github.com/niuhuan/mtotp-rs"


[dependencies]
base32 = "0.4"
hmac = "0.12"
sha1 = "0.10"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.33", features = ["io-std", "rt-multi-thread", "rt", "fs", "sync", "tokio-macros", "time", "macros"] }
uuid = { version = "1.4", features = ["v4"] }
regex = "1.10"
once_cell = "1.18"
url = "2.4"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
