[package]
name = "mtotp-lib"
description = "Totp manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.42.0", features = ["io-std", "rt-multi-thread", "rt", "fs", "sync", "tokio-macros", "time", "macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
once_cell = "1.20.2"
url = "2.5.4"
dirs = "5.0.1"
