[package]
name = "mtotp"
description = "Totp manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["io-std", "rt-multi-thread", "rt", "fs", "sync", "tokio-macros", "time", "macros"] }
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
mtotp-lib = { version = "0.1.4" }
qrcode = { version = "0.14.1", default-features = false, features = [] }
